--- a/Depo/Depo/App/Resources/ro.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ro.lproj/OurLocalizable.strings
@@ -1923,3 +1923,5 @@
 "change_album_cover_snackbar_text" = "Coperta albumului s-a schimbat cu succes.";
 "change_album_cover_error_text" = "A apărut o eroare la schimbarea fotografiei de copertă.";
 "change_album_cover_set_photo" = "Utilizați ca coperta de album";
+"location_file_info" = "Locație";
+"private_share_empty_list_error" = "";
