--- a/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
@@ -1966,3 +1966,5 @@
 "change_album_cover_snackbar_text" = "Kopertina e albumit u ndryshua me sukses.";
 "change_album_cover_error_text" = "Ndodhi një gabim gjatë ndryshimit të fotografisë së kopertinës.";
 "change_album_cover_set_photo" = "Përdoret si kopertinë e albumit";
+"location_file_info" = "vendndodhja";
+"private_share_empty_list_error" = "";
