--- a/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
@@ -1975,3 +1975,10 @@
 "change_album_cover_set_photo" = "Use as album cover";
 "location_file_info" = "Location";
 "private_share_empty_list_error" = "Kullanıcı listesi boş olamaz veya kendi hesabınızla paylaşım yapılamaz.";
+
+/*Change album cover photo*/
+"dark_mode_page_title_text" = "Dark Mode";
+"dark_mode_title_text" = "Mode";
+"dark_mode_dark_text" = "Dark";
+"dark_mode_light_text" = "Light";
+"dark_mode_default_text" = "Default";
