DE-12086 People Thumbnail Update

--- a/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
@@ -1940,8 +1940,14 @@
 
 
 /*Change album cover photo*/
-"dark_mode_page_title_text" = "";
-"dark_mode_title_text" = "";
-"dark_mode_dark_text" = "";
-"dark_mode_light_text" = "";
-"dark_mode_default_text" = "";
+"dark_mode_page_title_text" = "الوضع الداكن";
+"dark_mode_title_text" = "الوضع";
+"dark_mode_dark_text" = "داكن";
+"dark_mode_light_text" = "مشرق";
+"dark_mode_default_text" = "تقصير";
+
+/*Change person thumbnail*/
+"change_album_person_snackbar_text" = "";
+"change_album_person_error_text" = "";
+"change_person_photo" = "";
+"change_album_person_set_photo" = "";
